--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Barışma Uygulaması" />
     <meta property="og:description" content="Barışalım mı? Özür dilerim, lütfen affet!" />
     <meta property="og:type" content="website" />
-    <title>Barışma Uygulaması</title>
+    <title>Barış benimle bebeyim</title>
   </head>
   <body>
     <div id="root"></div>
